--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 
-kapacitor_extra_dsl_dir: /usr/local/kapacitor
-kapacitor_extra_exclude_tasks: [ diskio_alert ]     # kapacitor task not to define & to delete if it exists
-kapacitor_extra_database: telegraf
-kapacitor_extra_retention_policy: default
+kapacitor_dsl_dir: /usr/local/kapacitor
+kapacitor_dsl_exclude_tasks: [ diskio_alert ]     # kapacitor task not to define & to delete if it exists
+kapacitor_dsl_database: telegraf
+kapacitor_dsl_retention_policy: default
