--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,40 +3,40 @@
 # Assumptions:
 #   - Kapacitor TICKScript files are sourced from this role's files directory
 #   - All kapacktor task definition files (TICKScript files) are installed and enabled by default
-#   - "kapacitor_extra_exclude_tasks" variable for files to exclude and tasks to delete from kapacitor
+#   - "kapacitor_dsl_exclude_tasks" variable for files to exclude and tasks to delete from kapacitor
 
 - name: Create kapacitor dsl directory
   file:
-    path:  "{{ kapacitor_extra_dsl_dir }}"
+    path:  "{{ kapacitor_dsl_dir }}"
     state: directory
 
 - name: Copy kapacitor task definition files
   copy:
     src:  "{{ item }}"
-    dest: "{{ kapacitor_extra_dsl_dir }}"
+    dest: "{{ kapacitor_dsl_dir }}"
   with_fileglob:
     - "*.tick"
-  when: "{{ item|basename|replace('.tick','') not in kapacitor_extra_exclude_tasks }}"
+  when: "{{ item|basename|replace('.tick','') not in kapacitor_dsl_exclude_tasks }}"
 
 - name: Define and enable kapacitor tasks
   shell: >
       kapacitor define {{ item|basename|replace('.tick','') }} \
           -type stream \
-          -tick {{ kapacitor_extra_dsl_dir }}/{{ item|basename }} \
-          -dbrp {{ kapacitor_extra_database }}.{{ kapacitor_extra_retention_policy }} && \
+          -tick {{ kapacitor_dsl_dir }}/{{ item|basename }} \
+          -dbrp {{ kapacitor_dsl_database }}.{{ kapacitor_dsl_retention_policy }} && \
       kapacitor enable {{ item|basename|replace('.tick','') }}
   with_fileglob:
     - "*.tick"
-  when: "{{ item|basename|replace('.tick','') not in kapacitor_extra_exclude_tasks }}"
+  when: "{{ item|basename|replace('.tick','') not in kapacitor_dsl_exclude_tasks }}"
   register: define
 
 - name: Delete excluded kapacitor task definition files
   file:
-    path:  "{{ kapacitor_extra_dsl_dir }}/{{ item }}.tick"
+    path:  "{{ kapacitor_dsl_dsl_dir }}/{{ item }}.tick"
     state: absent
-  with_items: "{{ kapacitor_extra_exclude_tasks }}"
+  with_items: "{{ kapacitor_dsl_exclude_tasks }}"
 
 - name: Remove excluded kapacitor tasks
   shell: >
       kapacitor delete tasks {{ item }}
-  with_items: "{{ kapacitor_extra_exclude_tasks }}"
+  with_items: "{{ kapacitor_dsl_exclude_tasks }}"
