[OI] update meta

--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -12,7 +12,7 @@
       - '-H unix:///var/run/docker.sock'
     kapacitor_smtp_enabled:     true
     kapacitor_smtp_from:        "kapacitor@test-kitchen.com"
-    kapacitor_smtp_to:          ["oiwunze@equalexperts.com"]
+    kapacitor_smtp_to:          ["ogonna@gmail.com"]
     kapacitor_smtp_no_verify:   true
     kapacitor_smtp_global:      true
     ### testing v1.0.0-beta1 from unstable repo. Delete when package is promoted to stable
